* On first update, temporarily stop polling, and resume again once addItems is complete -- ensures to pick up new updates that occur while loading post items * Make sure to unbind events when clearing tag filter - otherwise doesn't rebuild posts correctly
* Added explicit hidePauseButton and showPauseButton functions
* Fix IE6 CSS layout issue

--- a/assets/scss/aol.liveupdate.scss
+++ b/assets/scss/aol.liveupdate.scss
@@ -509,6 +509,9 @@
 /* Styles for IE 6 and below */
 * html {
     .lb {
+        .lb-post {
+            zoom: 1;
+        }
         .lb-toolbar {
             padding-bottom: 15px;
         }
